--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <!-- The title for the body -->
     <div class="row logo">
         <div class="col-6">
-            <img class="logo2" src="images\allieddigital.png" alt="">
+            <img class="logo2" src="Images\allieddigital.png" alt="">
         </div>
 
         <div class="col-6">
-            <img class="logo1" src="images\1logo.png" alt="Accentcare Logo">
+            <img class="logo1" src="Images\1logo.png" alt="Accentcare Logo">
         </div>
     </div>
 
@@ -84,7 +84,7 @@
                     <span class="website"> www.accentcare.com </span>
 
                 </p>
-                <img class="signature_image" src="images/1logo.png" alt="Accentcare">
+                <img class="signature_image" src="Images/1logo.png" alt="Accentcare">
             </div>
             <div id="copy">
                 <button id="reset-form" type="button" onclick="location.reload()">Clear</button>
