--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <!-- The title for the body -->
     <div class="row logo">
         <div class="col-6">
-            <img class="logo2" src="Images\allieddigital.png" alt="">
+            <img class="logo2" src="Images/allieddigital.png" alt="">
         </div>
 
         <div class="col-6">
-            <img class="logo1" src="Images\1logo.png" alt="Accentcare Logo">
+            <img class="logo1" src="Images/1logo.png" alt="Accentcare Logo">
         </div>
     </div>
 
