--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <span class="lable">Check if Final-Followup</final-followup></span>
                     </div>
                     <div id="button_generate">
-                        <button id="button" type="submit" onclick="changeText(), main(), showDiv()">Generate</button>
+                        <button id="button" type="button" onclick="changeText(), main(), showDiv()">Generate</button>
 
                     </div>
                 </form>
