--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 
                 <p class="email_body">
                     Hello <span class="abhi"> User </span>,<br><br>
-                    &nbspI hope you’re doing well. This is a <span id="finalFollowup"> Follow-up</span> email for your
+                    &nbsp Hope you’re doing well. This is <span id="finalFollowup"> Follow-up</span> email for your
                     Ticket
-                    <span class="tkt1"> INC </span>, We tried to get in touch with you
+                    <span class="tkt1"> INC </span>, We tried to get in touch with you.<br>
                     Please call the Service desk at <strong>(866) 364-8911 <em>(Select option 1)</em></strong> to get
-                    this Resolved
+                    this Resolved.<br>
                     If this has already been resolved, Please
                     reply to this email with your confirmation.
                 </p>
